2007-11-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkei.el (shimbun-nikkei-get-headers-kansai): Update regexps.
	(shimbun-nikkei-prepare-article-kansai): Rewrite.
	(shimbun-nikkei-prepare-article-default-0)
	(shimbun-nikkei-prepare-article-default)
	(shimbun-nikkei-prepare-article-sports): Don't miss images.

2007-11-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-clear-contents): Don't remove related
	images.

2007-11-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-aljazeera.el (shimbun-aljazeera-x-face-alist): New variable.

2007-11-09  David Hansen  <david.hansen@gmx.net>

	* sb-aljazeera.el: New file.

2007-11-05  David Hansen  <david.hansen@gmx.net>

	* sb-infoshop.el (shimbun-rss-build-message-id): Fix format of
	the Message-Id.

2007-11-03  David Hansen  <david.hansen@gmx.net>

	* sb-infoshop.el (shimbun-rss-build-message-id): New function.

	* sb-weeklyworldnews.el: Remove.  cf. [emacs-w3m:09750]

2007-11-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-bbc.el (shimbun-bbc-x-face-alist): New.

	* sb-tech-on.el (shimbun-multi-next-url): Fix regexp matching next
	buttons.
	(shimbun-clear-contents): Fix regexp matching next buttons to be
	removed; remove alignment spec from images.

2007-11-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yomiuri.el (shimbun-yomiuri-get-top-header): Fix regexp.

2007-10-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-prepare-article): Don't miss the 2nd
	section of articles in editorial group.

2007-10-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-prepare-article): Follow site changes in
	editorial and tenjin groups; give up removing shop logos in book*
	groups; remove furigana in tamate subgroup; remove garbage after
	images; don't remove </*> tags at the bottom of article.

2007-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-clear-contents): Don't remove links to
	related news or topics (that should never be removed.  cf.